@@ -1,3 +1,9 @@
+2002-02-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/listbox.test:
+	* generic/tkListbox.c: corrected error handling when setting to an
+	invalid listvar value. [Bug #503613]
+
 2002-02-18  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes: First draft of updates to changes for 8.3.5.
